V0.2.1 Fixing some alignment issues  and fixing an display issue which resulted in the card name not being shown. Also simplified section css code

--- a/frontEndAudioTour/src/styles/AudioTourCard.module.css
+++ b/frontEndAudioTour/src/styles/AudioTourCard.module.css
@@ -28,8 +28,11 @@
 
 .cardName {
   font-weight: 500;
-  margin: 0 0 12px 0;
+  margin: 12px 0 12px 0;
   text-align: center;
+  position: static;
+  display: block;
+  color: #111;
 }
 
 .sectionLabel {
